# doki

./: .editorconfig  .gitignore  Cargo.toml  Readme.md  rustfmt.toml
.github/workflows/: rust.yml
projects/doki-core/: Cargo.toml
projects/doki-core/src/: errors.rs  lib.rs
projects/doki-core/src/config/: mod.rs  path.rs
projects/doki-core/src/config/i18n/: mod.rs
projects/doki-core/src/config/languages/: language.json5  mod.rs  parser.rs
projects/doki-core/src/config/mode/: mod.rs  parser.rs  url_builder.rs
projects/doki-core/src/config/parsing/: mod.rs  serde.rs
projects/doki-core/src/config/parsing/basic/: mod.rs
projects/doki-core/src/config/parsing/url_path/: mod.rs  rewrite_path.rs  rewrite_url.rs  test.rs
projects/doki-core/src/config/sidebar/: display.rs  methods.rs  mod.rs  parser.rs  sidebar.json5  test.rs
projects/doki-core/src/config/test/: config.json5  config.yaml  mod.rs
projects/doki-core/src/config/version/: mod.rs  parser.rs  version.json5
projects/doki-core/src/localization/: mod.rs
projects/doki-core/src/pages/: Readme.md  mod.rs
projects/doki-core/src/pages/content/: mod.rs
projects/doki-core/src/pages/content/footer/: mod.rs
projects/doki-core/src/pages/content/header/: mod.rs
projects/doki-core/src/traits/: mod.rs
projects/doki-core/src/widgets/: content.rs  mod.rs
projects/doki-core/src/widgets/content/footer/: mod.rs
projects/doki-core/tests/: main.rs
projects/doki-dioxus/: Cargo.toml  index.html
projects/doki-dioxus/src/: main.rs
projects/doki-dioxus/src/article/: mod.rs
projects/doki-dioxus/src/navbar/: mod.rs  navbar.json5
projects/doki-dioxus/src/sidebar/: item.rs  mod.rs  readme.md  sidebar.json5
projects/doki-docs/: doki.json5
projects/doki-docs/data/contributes/: contributes.toml
projects/doki-docs/posts/en/next/: sidebar.toml
projects/doki-docs/posts/zh-hans/: version.json5
projects/doki-docs/posts/zh-hans/next/: navbar.json5  sidebar.toml
projects/doki-docs/posts/zh-hans/next/commands/: Readme.md
projects/doki-docs/posts/zh-hans/next/tutorial/: sidebar.toml
projects/doki-docs/posts/zh-hans/next/tutorial/commands/: Readme.md
projects/doki-error/: Cargo.toml  readme.md
projects/doki-error/src/: lib.rs
projects/doki-error/src/error/: error_std.rs  mod.rs
projects/doki-error/src/error_3rd/: for_globset.rs  for_num.rs  for_serde.rs  for_serde_json.rs  mod.rs
projects/doki-git/: Cargo.toml  Readme.md
projects/doki-git/src/: errors.rs  lib.rs
projects/doki-git/src/local/: mod.rs
projects/doki-git/src/local/commit/: commit_file.rs  commit_item.rs  mod.rs
projects/doki-git/src/local/walk_dir/: mod.rs
projects/doki-git/tests/: main.rs
projects/doki-test/: Cargo.toml  index.html
projects/doki-test/src/: main.rs
projects/doki-web/: Cargo.toml
projects/doki-web/src/: main.rs
projects/doki-web/src/article/: mod.rs
projects/doki-web/src/navbar/: mod.rs  navbar.json5
projects/doki-web/src/sidebar/: data.rs  item.rs  mod.rs  sidebar.json5
projects/doki-web/src/utils/: mod.rs
projects/doki-web/src/widgets/: mod.rs  style.scss
