[package]
name = "doki-core"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/doki-land/doki"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
git = {version = "0.1.0", optional = true, package = "doki-git"}
config = { version = "0.11", optional = true, git = "https://github.com/mehcode/config-rs.git" }
#serde = { version = "1.0.132", features = ["derive"] }
notedown_ast = "0.16.1"
semver = "1.0.5"
log = "0.4.14"

[dependencies.doki-error]
version = "1.0.2"
features = ["config"]

[dev-dependencies]
env_logger = "0.9.0"

[features]
default = []
non-wasm = ["git", "config", "doki-error/config"]