[package]
name = "doki-core"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/doki-land/doki"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
# core
notedown_ast = "0.16.2"
log = "0.4.14"
# non-wasm
doki-git = { version = "0.1.1", optional = true}
config = { version = "0.12.0", optional = true }
# serde
serde = { version = "1.0.136", optional = true }
serde_derive = { version = "1.0.136", optional = true }
serde_json = { version = "1.0.79", optional = true }
bincode = { version = "1.3.3", optional = true }
# i18n
fluent = "0.16.0"
fluent-fallback = "0.6.0"
# utils
xxhash-rust = { version = "0.8.3", features = ["xxh3"] }
semver = "1.0.6"

[dependencies.doki-error]
version = "1.1.1"
path = "../doki-error"
features = []

[dev-dependencies]
env_logger = "0.9.0"

[features]
default = ["dumpdata", "non-wasm"]
dumpdata = ["serde", "serde_derive", "serde_json", "bincode", "doki-error/serde"]
non-wasm = ["git", "config", "doki-error/config"]
git = ["doki-git", "doki-error/git2"]

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
