[package]
name = "doki-dioxus"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/doki-land/doki"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
wasm-logger = "0.2.0"
serde = "1.0.136"
log = "0.4.14"
rsass = "0.23.4"
parcel_css = "1.0.0-alpha.19"
#parking_lot = { version = "0.12.0", features = ["wasm-bindgen"] }
config = "0.12.0"

[dependencies.doki-core]
version = "0.1.*"
path = "../doki-core"

[dependencies.dioxus]
version = "0.2.3"
features = ["web", "ssr"]

[dev-dependencies]
wasm-bindgen = "0.2.79"

[features]
default = []

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
s = "trunk serve"
sw = "dioxus serve"
sd = "dioxus serve --platform desktop"
