[package]
name = "doki-error"
version = "1.0.2"
authors = ["Aster <192607617@qq.com>"]
description = "Doki Error Handler Adaptors"
repository = "https://github.com/doki-land/doki"
documentation = "https://docs.rs/doki-error"
categories = []
keywords = ["error", "doki"]
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
url = "2.2.2"
yggdrasil-shared = { version = "0.2.1", default-features = false }
# 3rd parts
nom = { version = "7.1.0", optional = true }
num = { version = "0.4.0", optional = true }
rust_decimal = { version = "1.21.0", optional = true }
pest = { version = "2.1.3", optional = true }
globset = { version = "0.4.8", optional = true }
lsp-types = { version = "0.91.0", optional = true }
chrono = { version = "0.4.19", optional = true }
config = { version = "0.11", optional = true , git = "https://github.com/mehcode/config-rs.git" }

[dev-dependencies]

[features]
default = []
lsp = ["lsp-types", "yggdrasil-shared/lsp-types"]

[package.metadata.docs.rs]
all-features = true
