[package]
name = "doki-error"
version = "1.1.1"
authors = ["Aster <192607617@qq.com>"]
description = "Doki Error Handler Adaptors"
repository = "https://github.com/doki-land/doki"
documentation = "https://docs.rs/doki-error"
categories = []
keywords = ["error", "doki"]
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
url = "2.2.2"
yggdrasil-shared = { version = "0.2.1", default-features = false }
# 3rd parts
git2 = { version = "0.14.2", optional = true }
nom = { version = "7.1.0", optional = true }
num = { version = "0.4.0", optional = true }
rust_decimal = { version = "1.22.0", optional = true }
pest = { version = "2.1.3", optional = true }
globset = { version = "0.4.8", optional = true }
lsp-types = { version = "0.92.0", optional = true }
chrono = { version = "0.4.19", optional = true }
config = { version = "0.12.0", optional = true }
serde1 = { version = "1.0.1", optional = true }
serde_json = { version = "1.0.79", optional = true }
bincode = { version = "1.3.3", optional = true }

[dev-dependencies]

[features]
default = []
serde = ["serde1", "serde_json", "bincode"]
lsp = ["lsp-types", "yggdrasil-shared/lsp-types"]

[package.metadata.docs.rs]
all-features = true
