[package]
name = "doki-error"
version = "1.1.1"
authors = ["Aster <192607617@qq.com>"]
description = "Doki Error Handler Adaptors"
repository = "https://github.com/doki-land/doki"
documentation = "https://docs.rs/doki-error"
categories = []
keywords = ["error", "doki"]
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
url = "2.3.1"
yggdrasil-shared = { version = "0.2.2", default-features = false }
# 3rd parts
git2 = { version = "0.15.0", optional = true }
nom = { version = "7.1.1", optional = true }
num = { version = "0.4.0", optional = true }
rust_decimal = { version = "1.27.0", optional = true }
pest = { version = "2.5.0", optional = true }
globset = { version = "0.4.9", optional = true }
lsp-types = { version = "0.93.2", optional = true }
chrono = { version = "0.4.23", optional = true }
config = { version = "0.13.2", optional = true }
serde1 = { version = "1.0.1", optional = true }
serde_json = { version = "1.0.89", optional = true }
bincode = { version = "1.3.3", optional = true }
diagnostic = "0.4.3"

[dev-dependencies]

[features]
default = []
serde = ["serde1", "serde_json", "bincode"]
lsp = ["lsp-types", "yggdrasil-shared/lsp-types"]

[package.metadata.docs.rs]
all-features = true
