[package]
name = "doki-git"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/doki-land/doki"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
git2 = "0.13.25"
chrono = "0.4.19"
project-root = "0.2.2"
url = "2.2.2"
#  octocrab = "0.15"
jwalk = "*"

[dev-dependencies]

[features]
default = []
