[package]
name = "doki-git"
version = "0.1.1"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/doki-land/doki"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
git2 = "0.15.0"
chrono = "0.4.23"
project-root = "0.2.2"
url = "2.3.1"
#  octocrab = "0.15"
jwalk = "0.6.0"
pathdiff = "0.2.1"

[dev-dependencies]

[features]
default = []

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
